--- a/AngularPremierProgramme.html
+++ b/AngularPremierProgramme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<script type="text/javascript" src="angular.min.js"></script>
-		<script type="text/javascript" src="test1.js"></script>
+		<script type="text/javascript" src="AngularPremierProgramme.js"></script>
 	</head>
 
 	<body ng-app="myApp"> 
